plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'api'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux' //SPRING WEBFLUX
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc' //SPRING R2DBC
    implementation 'org.springframework.boot:spring-boot-starter-validation' //SPRING VALIDATION
    implementation 'org.springframework.boot:spring-boot-starter-security' //SPRING SECURITY
    implementation 'org.springframework.boot:spring-boot-starter-actuator' //SPRING ACTUATOR
    developmentOnly 'org.springframework.boot:spring-boot-devtools' //SPRING DEV-TOOLS
    runtimeOnly 'io.r2dbc:r2dbc-postgresql' //R2DBC POSTGRESQL DRIVER
    implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.15' //SPRINGDOC OPENAPI WEBFLUX
    compileOnly 'org.projectlombok:lombok' //LOMBOK
    annotationProcessor 'org.projectlombok:lombok' //LOMBOK
    implementation 'org.modelmapper:modelmapper:3.1.1' //MODELMAPPER
    testImplementation 'org.springframework.boot:spring-boot-starter-test' //SPRING TEST
    testImplementation 'org.springframework.security:spring-security-test' //SPRING SECURITY TEST
    testImplementation 'io.projectreactor:reactor-test' //REACTOR TEST
    testRuntimeOnly 'io.r2dbc:r2dbc-h2'
}

bootBuildImage {
    imageName = 'profanator_api_image'
}

test {
    useJUnitPlatform()
}